# idem-serverless

./: Cargo.toml  README.md
config/: jwt_validator.json  trace.json
idem-config/: Cargo.toml
idem-config/src/: config.rs  config_cache.rs  execution_flow_config.rs  lib.rs
idem-encoder/: Cargo.toml
idem-encoder/benches/: encode_benchmarks.rs
idem-encoder/src/: css_encoder.rs  encoder.rs  html_encoder.rs  java_script_encoder.rs  lib.rs  xml_encoder.rs
idem-error/: Cargo.toml
idem-handler/: Cargo.toml
idem-handler/src/: exchange.rs  executor.rs  factory.rs  handler.rs  lib.rs  status.rs
idem-macro/: Cargo.toml
idem-macro/src/: lib.rs
idem-openapi/: Cargo.toml
idem-openapi/src/: constants.rs  json_path_builder.rs  lib.rs  node_finder.rs
idem-openapi/src/oas3/: component.rs  encoding.rs  error.rs  example.rs  external_doc.rs  header.rs  info.rs  link.rs  media_type.rs  mod.rs  object_ref.rs  path_item.rs  schema.rs  security_schema.rs  server.rs  spec_extensions.rs
idem-openapi/test/: openapi.json
idem-serverless/: Cargo.toml
idem-serverless/config/: handlers.json  jwks.json
idem-serverless/src/: entry.rs  main.rs
idem-serverless/src/implementation/: cors_handler.rs  echo_test_middleware.rs  header_handler.rs  health_check_handler.rs  invoke_lambda_handler.rs  mod.rs  sanitizer_handler.rs  specification_handler.rs  traceability_handler.rs
idem-serverless/src/implementation/cors/: config.rs  handler.rs
idem-serverless/src/implementation/echo/: config.rs  handler.rs
idem-serverless/src/implementation/header/: config.rs  handler.rs
idem-serverless/src/implementation/health/: config.rs  handler.rs
idem-serverless/src/implementation/jwt/: config.rs  handler.rs  jwk_provider.rs  mod.rs
idem-serverless/src/implementation/jwt/test/: enc_test_jwk_pub.json  enc_test_jwk_pub_priv_kp.json  enc_test_jwk_pub_priv_kp_set.json  sig_test_jwk_pub.json  sig_test_jwk_pub_priv_kp.json  sig_test_jwk_pub_priv_kp_set.json
idem-serverless/src/implementation/proxy/: config.rs  handler.rs
idem-serverless/src/implementation/sanitizer/: config.rs  handler.rs
idem-serverless/src/implementation/traceability/: config.rs  handler.rs
idem-serverless/src/implementation/validator/: config.rs  handler.rs
idem-serverless/test_resources/config/: proxy.json  trace.json
src/: entry.rs  exchange.rs  executor.rs  main.rs  status.rs
src/config/: config.rs
src/handler/: cors.rs  echo.rs  header.rs  health.rs  jwt.rs  mod.rs  proxy.rs  sanitizer.rs  traceability.rs  validator.rs
src/handlers/: cors_handler.rs  echo_test_middleware.rs  header_handler.rs  health_check_handler.rs  invoke_lambda_handler.rs  mod.rs  sanitizer_handler.rs  specification_handler.rs  traceability_handler.rs
test_resources/jwt/: test_verify_scopes.json
