[package]
name = "idem-serverless"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.14.0"
aws-sdk-lambda = "1.73.0"
aws-config = "1.6.0"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
