[package]
name = "idem-serverless"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Kalev Gonvick kalev.gonvick@idemio.dev"]

[profile.release]
opt-level = 3

[dependencies]
idemio-macro = { version = "0.1.0" }
tiny-clean = { version = "0.1.0" }
oasert = { version = "0.1.4" }
idemio = { version = "0.1.1" }
lambda_http = "0.17.0"
http = "1.3.1"
aws-sdk-lambda = "1.100.0"
aws-config = "1.8.8"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.44.1", features = ["macros"] }
base64 = { version = "0.22", features = ["alloc"] }
uuid = { version = "1.18.1", features = ["v4"] }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
rsa = { version = "0.9.8" , features = ["pem", "pkcs5"]  }
tracing = "0.1.41"
async-trait = "0.1.88"
