[package]
name = "idem-serverless"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

[dependencies]
idem-handler = { path = "../idem-handler" }
idem-config = { path = "../idem-config" }

lambda_http = "0.14.0"
aws-sdk-lambda = "1.73.0"
aws-config = "1.6.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["macros"] }
log = "0.4.27"
base64 = { version = "0.22", features = ["alloc"] }
uuid = { version = "1.16.0", features = ["v4"] }
jsonwebtoken = { version = "9.3.1" }
rsa = { version = "0.9.8" , features = ["pem", "pkcs5"]  }